--- a/front-end/package.json
+++ b/front-end/package.json
@@ -2,16 +2,20 @@
   "dependencies": {
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "es6-promise": "^4.2.8",
     "esm": "^3.2.25",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
+    "flash": "^1.1.0",
     "http": "0.0.1-security",
     "isomorphic-fetch": "^3.0.0",
     "multer": "^1.4.4",
     "node-fetch": "^3.2.4",
     "path": "^0.12.7",
+    "session": "^0.1.0",
     "socket.io": "^4.5.1"
   }
 }
