--- a/dockerfiles/front-end/Dockerfile
+++ b/dockerfiles/front-end/Dockerfile
@@ -1,9 +1,9 @@
 FROM node:16
 
-RUN mkdir /usr/src/app/upload
-RUN mkdir /usr/src/app/upload/pdf
-RUN mkdir /usr/src/app/upload/img
-RUN mkdir /usr/src/app/upload/video
+RUN mkdir -p /usr/src/app/upload
+RUN mkdir -p /usr/src/app/upload/pdf
+RUN mkdir -p /usr/src/app/upload/img
+RUN mkdir -p /usr/src/app/upload/video
 
 # Create app directory
 WORKDIR /usr/src/app
