--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -22,7 +22,7 @@ services:
     volumes:
       - './front-end:/usr/src/app'
       - './upload:/usr/src/app/upload'
-    command: node servico.js
+    command: ./execute.sh
     ports:
       - '5002:3000'
   arquivos:
