--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
     hostname: backend
     volumes:
       - './back-end/chatbot:/usr/src/app'
-    command: python3 servico.py
+    command: flask run
     ports:
       - '5001:5000'
   frontend:
@@ -22,7 +22,7 @@ services:
     volumes:
       - './front-end:/usr/src/app'
       - './upload:/usr/src/app/upload'
-    command: ./execute.sh
+    command: bash ./execute.sh
     ports:
       - '5002:3000'
   arquivos:
